[package]
name = "web_app_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
